--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,6 @@ on:
     branches:
       - main
 
-# Add write permissions for the GITHUB_TOKEN
 permissions:
   contents: write
 
@@ -17,59 +16,170 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     
     steps:
-      # Checks-out your repository with full history
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          lfs: true
-          fetch-depth: 0  # Fetch all history for all branches
+          fetch-depth: 0
       
-      # Setup Python 3.12.7
       - name: Set up Python 3.12.7
         uses: actions/setup-python@v4
         with:
           python-version: "3.12.7"
        
-      # Check Env Variables
-      - name: Check Env
-        run: |
-          echo $CSV_URL
-      
-      # Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install mlflow scikit-learn pandas numpy
        
-      # Run as a mlflow project
       - name: Run mlflow project
         run: |
-          mlflow run MLproject --env-manager=local 
+          mlflow run MLproject --env-manager=local
       
-      # Set up Git LFS and commit changes
-      - name: Set up Git LFS and save results
+      - name: Check mlruns folder
         run: |
-          # Configure git
+          echo "=== Checking mlruns folder ==="
+          ls -la
+          if [ -d "mlruns" ]; then
+            echo "mlruns folder exists"
+            ls -la mlruns/
+            find mlruns -type f | head -20
+          else
+            echo "ERROR: mlruns folder not found!"
+            exit 1
+          fi
+      
+      - name: Setup Git LFS
+        run: |
+          git lfs install
+          git lfs track "mlruns/**"
+          cat .gitattributes
+          
+      - name: Commit and push mlruns
+        run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           
-          # Setup Git LFS
+          # Add .gitattributes first
+          git add .gitattributes
+          
+          # Add all mlruns files
+          git add -f mlruns/
+          
+          # Show what will be committed
+          echo "=== Files to be committed ==="
+          git status
+          
+          # Check if there are changes
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            echo "=== Committing changes ==="
+            git commit -m "Add mlruns from CI run [skip ci]"
+            
+            # Pull and push with retry
+            for i in {1..3}; do
+              echo "Attempt $i to push..."
+              git pull --rebase origin main && git push origin main && break
+              sleep 2
+            done
+          fi
+      
+      - name: Verify push
+        run: |
+          echo "=== Verifying files were pushed ==="
+          git ls-tree -r HEAD --name-only | grep mlruns || echo "No mlruns files found in repository"name: CI
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+permissions:
+  contents: write
+
+env:
+  CSV_URL: "MLproject/train_pca.csv"
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
+      
+      - name: Set up Python 3.12.7
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12.7"
+       
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install mlflow scikit-learn pandas numpy
+       
+      - name: Run mlflow project
+        run: |
+          mlflow run MLproject --env-manager=local
+      
+      - name: Check mlruns folder
+        run: |
+          echo "=== Checking mlruns folder ==="
+          ls -la
+          if [ -d "mlruns" ]; then
+            echo "mlruns folder exists"
+            ls -la mlruns/
+            find mlruns -type f | head -20
+          else
+            echo "ERROR: mlruns folder not found!"
+            exit 1
+          fi
+      
+      - name: Setup Git LFS
+        run: |
           git lfs install
           git lfs track "mlruns/**"
+          cat .gitattributes
           
-          # Pull latest changes with rebase
-          git pull --rebase origin main
+      - name: Commit and push mlruns
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           
-          # Add and commit all changes
-          git add .gitattributes mlruns/
-          git commit -m "Track and save mlruns from CI run [skip ci]" || echo "No changes to commit"
+          # Add .gitattributes first
+          git add .gitattributes
           
-      # Push changes
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main
-          force: false
+          # Add all mlruns files
+          git add -f mlruns/
+          
+          # Show what will be committed
+          echo "=== Files to be committed ==="
+          git status
+          
+          # Check if there are changes
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            echo "=== Committing changes ==="
+            git commit -m "Add mlruns from CI run [skip ci]"
+            
+            # Pull and push with retry
+            for i in {1..3}; do
+              echo "Attempt $i to push..."
+              git pull --rebase origin main && git push origin main && break
+              sleep 2
+            done
+          fi
+      
+      - name: Verify push
+        run: |
+          echo "=== Verifying files were pushed ==="
+          git ls-tree -r HEAD --name-only | grep mlruns || echo "No mlruns files found in repository"
