--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI/CD MLflow
 on:
   push:
     branches:
@@ -7,87 +7,56 @@ on:
     branches:
       - main
 
-permissions:
-  contents: write
-
 env:
   CSV_URL: "MLproject/train_pca.csv"
+  TARGET_VAR: "Credit_Score"
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE
       - uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0
       
       - name: Set up Python 3.12.7
         uses: actions/setup-python@v4
         with:
           python-version: "3.12.7"
        
+      - name: Check Env
+        run: |
+          echo $CSV_URL
+       
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mlflow scikit-learn pandas numpy
-       
+          pip install mlflow 
+      
       - name: Run mlflow project
         run: |
           mlflow run MLproject --env-manager=local
       
-      - name: Check mlruns folder
+      - name: Get latest MLflow run_id
         run: |
-          echo "=== Checking mlruns folder ==="
-          ls -la
-          if [ -d "mlruns" ]; then
-            echo "mlruns folder exists"
-            ls -la mlruns/
-            find mlruns -type f | head -20
-          else
-            echo "ERROR: mlruns folder not found!"
-            exit 1
-          fi
+          RUN_ID=$(ls -td mlruns/0/*/ | head -n 1 | cut -d'/' -f3)
+          echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
+          echo "Latest run_id: $RUN_ID"
+          
+      - name: Build Docker Model
+        run: |
+          mlflow models build-docker --model-uri "runs:/$RUN_ID/model" --name "cc"
       
-      - name: Setup Git LFS
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Tag Docker Image
         run: |
-          git lfs install
-          git lfs track "mlruns/**"
-          cat .gitattributes
-          
-      - name: Commit and push mlruns
+          docker tag cc ${{ secrets.DOCKER_HUB_USERNAME }}/cc:latest
+
+      - name: Push Docker Image
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          
-          # Add .gitattributes first
-          git add .gitattributes
-          
-          # Add all mlruns files
-          git add -f mlruns/
-          
-          # Show what will be committed
-          echo "=== Files to be committed ==="
-          git status
-          
-          # Check if there are changes
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
-            echo "=== Committing changes ==="
-            git commit -m "Add mlruns from CI run [skip ci]"
-            
-            # Pull and push with retry
-            for i in {1..3}; do
-              echo "Attempt $i to push..."
-              git pull --rebase origin main && git push origin main && break
-              sleep 2
-            done
-          fi
-      
-      - name: Verify push
-        run: |
-          echo "=== Verifying files were pushed ==="
-          git ls-tree -r HEAD --name-only | grep mlruns || echo "No mlruns files found in repository"
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/cc:latest
