--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,6 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE
       - uses: actions/checkout@v3
       
       - name: Set up Python 3.12.7
@@ -31,32 +30,51 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mlflow 
+          pip install mlflow scikit-learn pandas numpy
       
       - name: Run mlflow project
         run: |
           mlflow run MLproject --env-manager=local
       
-      - name: Get latest MLflow run_id
+      - name: Set MLflow tracking URI and get run_id
         run: |
+          export MLFLOW_TRACKING_URI=file://$(pwd)/mlruns
+          echo "MLFLOW_TRACKING_URI=$MLFLOW_TRACKING_URI" >> $GITHUB_ENV
+          
+          # Get the latest run_id
           RUN_ID=$(ls -td mlruns/0/*/ | head -n 1 | cut -d'/' -f3)
           echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
           echo "Latest run_id: $RUN_ID"
+          echo "MLflow tracking URI: $MLFLOW_TRACKING_URI"
+      
+      - name: Verify model exists
+        run: |
+          echo "Checking if model exists..."
+          if [ -d "mlruns/0/$RUN_ID/artifacts/model" ]; then
+            echo "Model found at mlruns/0/$RUN_ID/artifacts/model"
+            ls -la mlruns/0/$RUN_ID/artifacts/model/
+          else
+            echo "ERROR: Model not found!"
+            exit 1
+          fi
           
       - name: Build Docker Model
         run: |
-          mlflow models build-docker --model-uri "runs:/$RUN_ID/model" --name "cc"
+          # Use the file path directly instead of runs:/ URI
+          mlflow models build-docker \
+            --model-uri "mlruns/0/$RUN_ID/artifacts/model" \
+            --name "cc"
       
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
+      
       - name: Tag Docker Image
         run: |
           docker tag cc ${{ secrets.DOCKER_HUB_USERNAME }}/cc:latest
-
+      
       - name: Push Docker Image
         run: |
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/cc:latest
